# serializer version: 1
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT 2, count() FROM users GROUP BY 2]
  tuple(
    'SELECT 2, count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 2',
    dict({
    }),
  )
# ---
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT a.user_id FROM users a JOIN users b ON a.user_id = b.user_id GROUP BY b.user_id]
  tuple(
    'SELECT "a"."user_id" FROM "ducklake"."analytics"."users" AS "a" JOIN "ducklake"."analytics"."users" AS "b" ON ("a"."user_id" = "b"."user_id") GROUP BY "b"."user_id"',
    dict({
    }),
  )
# ---
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT properties.color, count() FROM users GROUP BY properties.shape]
  tuple(
    'SELECT json_extract_scalar("users"."properties", %(hogql_val_0)s), count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY json_extract_scalar("users"."properties", %(hogql_val_1)s)',
    dict({
      'hogql_val_0': '$["color"]',
      'hogql_val_1': '$["shape"]',
    }),
  )
# ---
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT user_id = toString(1) AS bucket, count() FROM users GROUP BY user_id = toString(true)]
  tuple(
    'SELECT ("users"."user_id" = CAST(1 AS VARCHAR)) AS "bucket", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY ("users"."user_id" = CAST(true AS VARCHAR))',
    dict({
    }),
  )
# ---
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT user_id AS id FROM users GROUP BY concat(id, 'suffix')]
  tuple(
    'SELECT "users"."user_id" AS "id" FROM "ducklake"."analytics"."users" AS "users" GROUP BY concat(CAST("users"."user_id" AS VARCHAR), CAST(%(hogql_val_0)s AS VARCHAR))',
    dict({
      'hogql_val_0': 'suffix',
    }),
  )
# ---
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT user_id, count() FROM users GROUP BY ROLLUP(user_id)]
  tuple(
    'SELECT "users"."user_id", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY ROLLUP("users"."user_id")',
    dict({
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[concat(user_id, 'suffix')-None]
  tuple(
    'SELECT concat(CAST("users"."user_id" AS VARCHAR), CAST(%(hogql_val_0)s AS VARCHAR)) AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
      'hogql_val_0': 'suffix',
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[integer_alias]
  tuple(
    'SELECT 2 AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[notEmpty(properties.color)-None]
  tuple(
    'SELECT (json_extract_scalar("users"."properties", %(hogql_val_0)s) IS NOT NULL AND json_extract_scalar("users"."properties", %(hogql_val_0)s) <> \'\') AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
      'hogql_val_0': '$["color"]',
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[properties.color-None]
  tuple(
    'SELECT json_extract_scalar("users"."properties", %(hogql_val_0)s) AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
      'hogql_val_0': '$["color"]',
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[toStartOfMonth(toTimeZone(created_at, 'UTC'))-None]
  tuple(
    'SELECT CAST(date_trunc(\'month\', at_timezone(with_timezone(CAST("users"."created_at" AS TIMESTAMP), \'UTC\'), %(hogql_val_0)s)) AS DATE) AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
      'hogql_val_0': 'UTC',
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[zero_alias]
  tuple(
    'SELECT 0 AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
    }),
  )
# ---
# name: test_lowered_property_timestamp_is_not_constant
  tuple(
    'SELECT CAST(json_extract_scalar("users"."properties", %(hogql_val_0)s) AS TIMESTAMP) FROM "ducklake"."analytics"."users" AS "users"',
    dict({
      'hogql_val_0': '$["cutoff"]',
    }),
  )
# ---
# name: test_prepared_trino_transpiler_does_not_rebuild_the_schema_database[SELECT properties.color, count() FROM users GROUP BY properties.color]
  tuple(
    'SELECT json_extract_scalar("users"."properties", %(hogql_val_0)s), count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
      'hogql_val_0': '$["color"]',
    }),
  )
# ---
# name: test_prepared_trino_transpiler_does_not_rebuild_the_schema_database[SELECT user_id FROM users ORDER BY created_at DESC LIMIT 2 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id" FROM (SELECT "users"."user_id" AS "user_id", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."created_at" DESC) AS "__hogql_limit_by_row_0", "users"."created_at" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC',
    dict({
    }),
  )
# ---
# name: test_prepared_trino_transpiler_does_not_rebuild_the_schema_database[SELECT user_id FROM users WHERE user_id = 'person-1']
  tuple(
    'SELECT "users"."user_id" FROM "ducklake"."analytics"."users" AS "users" WHERE ("users"."user_id" = %(hogql_val_0)s)',
    dict({
      'hogql_val_0': 'person-1',
    }),
  )
# ---
# name: test_prepared_trino_transpiler_does_not_rebuild_the_schema_database[SELECT user_id FROM users WHERE user_id IN ['violet', 'amber']]
  tuple(
    'SELECT "users"."user_id" FROM "ducklake"."analytics"."users" AS "users" WHERE ("users"."user_id" IN (%(hogql_val_0)s, %(hogql_val_1)s))',
    dict({
      'hogql_val_0': 'violet',
      'hogql_val_1': 'amber',
    }),
  )
# ---
# name: test_prepared_trino_transpiler_does_not_rebuild_the_schema_database[WITH seed AS (SELECT 7 AS n) SELECT n FROM seed UNION ALL SELECT n FROM seed]
  tuple(
    'WITH "seed" AS (SELECT 7 AS "n") (SELECT "seed"."n" FROM "seed") UNION ALL (SELECT "seed"."n" FROM "seed")',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT a.created_at FROM users a JOIN users b ON a.user_id = b.user_id ORDER BY b.created_at DESC LIMIT 2 BY a.user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."created_at" FROM (SELECT "a"."created_at" AS "created_at", row_number() OVER (PARTITION BY "a"."user_id" ORDER BY "b"."created_at" DESC) AS "__hogql_limit_by_row_0", "b"."created_at" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "a" JOIN "ducklake"."analytics"."users" AS "b" ON ("a"."user_id" = "b"."user_id")) AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT properties.color FROM users ORDER BY user_id LIMIT 1 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."color" FROM (SELECT json_extract_scalar("users"."properties", %(hogql_val_0)s) AS "color", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."user_id" ASC) AS "__hogql_limit_by_row_0", "users"."user_id" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 1) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" ASC',
    dict({
      'hogql_val_0': '$["color"]',
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT properties.color, row_number() OVER (ORDER BY user_id) AS rn FROM users QUALIFY rn = 1 ORDER BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."color", "__hogql_trino_source_0"."rn" FROM (SELECT json_extract_scalar("users"."properties", %(hogql_val_0)s) AS "color", row_number() OVER (ORDER BY "users"."user_id" ASC) AS "rn", "users"."user_id" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."rn" = 1) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" ASC',
    dict({
      'hogql_val_0': '$["color"]',
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id AS __hogql_order_0, created_at AS __hogql_limit_by_row_0 FROM users ORDER BY toStartOfDay(created_at) DESC LIMIT 2 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."__hogql_order_0", "__hogql_trino_source_0"."__hogql_limit_by_row_0" FROM (SELECT "users"."user_id" AS "__hogql_order_0", "users"."created_at" AS "__hogql_limit_by_row_0", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY date_trunc(\'day\', "users"."created_at") DESC) AS "__hogql_limit_by_row_0_1", date_trunc(\'day\', "users"."created_at") AS "__hogql_order_0_1" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0_1" <= 2) ORDER BY "__hogql_trino_source_0"."__hogql_order_0_1" DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id AS id FROM users ORDER BY id DESC LIMIT 2 BY id]
  tuple(
    'SELECT "__hogql_trino_source_0"."id" FROM (SELECT "users"."user_id" AS "id", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."user_id" DESC) AS "__hogql_limit_by_row_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."id" DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id FROM users ORDER BY created_at DESC LIMIT 2 BY user_id LIMIT 5 OFFSET 1]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id" FROM (SELECT "users"."user_id" AS "user_id", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."created_at" DESC) AS "__hogql_limit_by_row_0", "users"."created_at" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC OFFSET 1 ROWS LIMIT 5',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id FROM users ORDER BY toStartOfDay(created_at) DESC LIMIT 2 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id" FROM (SELECT "users"."user_id" AS "user_id", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY date_trunc(\'day\', "users"."created_at") DESC) AS "__hogql_limit_by_row_0", date_trunc(\'day\', "users"."created_at") AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, count() AS total FROM users GROUP BY user_id ORDER BY total DESC LIMIT 2 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."total" FROM (SELECT "users"."user_id" AS "user_id", count(*) AS "total", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY count(*) DESC) AS "__hogql_limit_by_row_0" FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1) AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."total" DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, created_at FROM users ORDER BY 2 DESC LIMIT 2 BY 1]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."created_at" FROM (SELECT "users"."user_id" AS "user_id", "users"."created_at" AS "created_at", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."created_at" DESC) AS "__hogql_limit_by_row_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY 2 DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, created_at FROM users ORDER BY 2 DESC LIMIT 2 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."created_at" FROM (SELECT "users"."user_id" AS "user_id", "users"."created_at" AS "created_at", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."created_at" DESC) AS "__hogql_limit_by_row_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY 2 DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, row_number() OVER (ORDER BY created_at) AS position FROM users QUALIFY position = 1 ORDER BY created_at DESC LIMIT 3]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."position" FROM (SELECT "users"."user_id" AS "user_id", row_number() OVER (ORDER BY "users"."created_at" ASC) AS "position", "users"."created_at" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."position" = 1) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC LIMIT 3',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, user_id = toString(1) AS bucket, row_number() OVER (ORDER BY user_id) AS rn FROM users QUALIFY rn > 0 ORDER BY user_id = toString(1.0) DESC LIMIT 1]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."bucket", "__hogql_trino_source_0"."rn" FROM (SELECT "users"."user_id" AS "user_id", ("users"."user_id" = CAST(1 AS VARCHAR)) AS "bucket", row_number() OVER (ORDER BY "users"."user_id" ASC) AS "rn", ("users"."user_id" = CAST(1.0 AS VARCHAR)) AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."rn" > 0) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC LIMIT 1',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, user_id = toString(1) AS bucket, row_number() OVER (ORDER BY user_id) AS rn FROM users QUALIFY rn > 0 ORDER BY user_id = toString(true) DESC LIMIT 1]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."bucket", "__hogql_trino_source_0"."rn" FROM (SELECT "users"."user_id" AS "user_id", ("users"."user_id" = CAST(1 AS VARCHAR)) AS "bucket", row_number() OVER (ORDER BY "users"."user_id" ASC) AS "rn", ("users"."user_id" = CAST(true AS VARCHAR)) AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."rn" > 0) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC LIMIT 1',
    dict({
    }),
  )
# ---
